--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
+
 
     <application
         android:allowBackup="true"
@@ -12,13 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UE3_Ewinger_Benischke"
         tools:targetApi="31">
+
+        <service android:name=".AudioService" />
+        <activity
+            android:name=".ServiceActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,5 +33,7 @@
             </intent-filter>
         </activity>
     </application>
+
+
 
 </manifest>
