--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,8 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UE3_Ewinger_Benischke"
         tools:targetApi="31">
+        <activity
+            android:name=".HostActivity"
+            android:exported="false" />
 
         <service android:name=".AudioService" />
+
         <activity
             android:name=".ServiceActivity"
             android:exported="false" />
@@ -33,7 +35,5 @@
             </intent-filter>
         </activity>
     </application>
-
-
 
 </manifest>
