--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:name=".ServiceActivity"
             android:exported="false" />
         <activity
+            android:name=".TouchActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
