--- a/UE_4/app/src/main/AndroidManifest.xml
+++ b/UE_4/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.UE4_Ewinger_Benischke"
         tools:targetApi="31">
         <activity
+            android:name=".PersonalWebBrowserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConstraintLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LayoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
