--- a/UE_4/app/src/main/AndroidManifest.xml
+++ b/UE_4/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.UE4_Ewinger_Benischke"
         tools:targetApi="31">
         <activity
+            android:name=".InfoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_info"
+            android:theme="@style/Theme.UE4_Ewinger_Benischke" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
