--- a/UE_4/app/src/main/AndroidManifest.xml
+++ b/UE_4/app/src/main/AndroidManifest.xml
@@ -8,18 +8,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UE4_Ewinger_Benischke"
         tools:targetApi="31">
-        <activity
-            android:name=".PersonalWebBrowserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ConstraintLayoutActivity"
-            android:exported="false" />
         <activity
             android:name=".LayoutActivity"
             android:exported="false" />
