--- a/UE_5/UE5_Ewinger_Benischke/app/src/main/AndroidManifest.xml
+++ b/UE_5/UE5_Ewinger_Benischke/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.UE5_Ewinger_Benischke"
         tools:targetApi="31">
         <activity
-            android:name=".Measurement_Units_1"
+            android:name=".ChatApp"
+            android:exported="false" />
+        <activity
+            android:name=".SimpleListView"
+            android:exported="false" />
+        <activity
+            android:name=".MeasurementUnits"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
