--- a/UE_5/UE5_Ewinger_Benischke/app/src/main/AndroidManifest.xml
+++ b/UE_5/UE5_Ewinger_Benischke/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".MeasurementUnits"
             android:exported="false" />
         <activity
+            android:name=".UnitConverter"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
