--- a/UE_6_EwingerBenischke/app/src/main/AndroidManifest.xml
+++ b/UE_6_EwingerBenischke/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.UE_6_EwingerBenischke"
         tools:targetApi="31">
         <activity
+            android:name=".Task4"
+            android:exported="false" />
+        <activity
+            android:name=".Task3"
+            android:exported="false" />
+        <activity
+            android:name=".Task2"
+            android:exported="false" />
+        <activity
+            android:name=".Task1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
