--- a/UE_6_EwingerBenischke/app/src/main/AndroidManifest.xml
+++ b/UE_6_EwingerBenischke/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UE_6_EwingerBenischke"
         tools:targetApi="31">
+        <activity
+            android:name=".TestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_test"
+            android:theme="@style/Theme.UE_6_EwingerBenischke" />
         <activity
             android:name=".Task4"
             android:exported="false" />
