--- a/UE_6_EwingerBenischke/app/build.gradle
+++ b/UE_6_EwingerBenischke/app/build.gradle
@@ -47,6 +47,10 @@ android {
     dataBinding {
         enabled = true
     }
+
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
