--- a/UE8/app/src/main/AndroidManifest.xml
+++ b/UE8/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UE8_Ewinger_Benischke"
+        android:theme="@style/Base.Theme.UE8_Ewinger_Benischke"
         tools:targetApi="31">
         <activity
             android:name=".Task4"
