--- a/UE_9/app/src/main/AndroidManifest.xml
+++ b/UE_9/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UE_9_Ewinger_Benischke"
         tools:targetApi="31">
+        <receiver
+            android:name=".BatteryLevelReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
         <activity
             android:name=".Task4"
             android:exported="false" />
